# featurely

./: .gitignore  AGENTS.md  README-pypi.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/cpu/: devcontainer.json
.devcontainer/mac/: devcontainer.json
.devcontainer/nvidia/: devcontainer.json
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: getting-started.md  index.md
docs/api/: aggregate.md  cluster.md  decomposition.md  diagnostics.md  eda.md  geo.md  outliers.md  pipeline.md  scans.md  smoothing.md  transforms.md
example_notebooks/fsa-feature-engineering-challenge/: 01-EDA.ipynb  02-outlier-cleaning.ipynb  03-feature-transformations.ipynb  04-interaction-features.ipynb  05-p_censoring.ipynb  06-location-feature-encoding.ipynb  07-aggregate-features.ipynb  08-clustering.ipynb  09-smoothing.ipynb  10-polyfeatures-pca.ipynb  config.py  lesson-16-activity-solution.ipynb
notebooks/: 01-EDA.ipynb  02-outlier-cleaning.ipynb  03-feature-transformations.ipynb  04-interaction-features.ipynb  05-p_censoring.ipynb  07-aggregate-features.ipynb  08-clustering.ipynb  10-polyfeatures-pca.ipynb  config.py  lesson-16-activity-solution.ipynb  original-assignment.ipynb
src/featurely/: __init__.py  _display.py  aggregate.py  cluster.py  decomposition.py  diagnostics.py  eda.py  geo.py  outliers.py  pipeline.py  scans.py  smoothing.py  transforms.py
src/featurely.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_analysis.py  test_features.py  test_imports.py  test_metadata.py
