[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "featurely"
version = "0.1.0"
description = "Reusable feature engineering utilities extracted from the lesson 16 notebook solution"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Siderealyear" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scipy>=1.10",
  "statsmodels>=0.14",
  "scikit-learn>=1.3",
]

[project.urls]
Repository = "https://github.com/gperdrizet/featurely"
"Original Assignment" = "https://github.com/gperdrizet/fullstack-2605"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
